force-app/main/default/objects/WorkOrder/fields/Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Sub_Status__c</fullName>
    <description>Parecer final da OT.</description>
    <inlineHelpText>Parecer final da OT.</inlineHelpText>
    <label>Sub-Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FINALIZADO</fullName>
            </value>
            <value>
                <fullName>NÃO AUTORIZADO</fullName>
            </value>
            <value>
                <fullName>SEM CONSERTO</fullName>
            </value>
            <value>
                <fullName>NÃO APRESENTOU DEFEITO</fullName>
            </value>
            <value>
                <fullName>GARANTIA DE SERVIÇO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>