force-app/main/default/objects/WorkOrder/fields/T_cnico_Respons_vel__c.field-meta.xml
<CustomField>
    <fullName>T_cnico_Respons_vel__c</fullName>
    <inlineHelpText>Esse campo foi descontinuado. Selecione o técnico no campo Técnico executor</inlineHelpText>
    <label>Responsável pela O.T (LEGADO)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALEXANDRE AMARAL</fullName>
            </value>
            <value>
                <fullName>ALON ROCHA DA SILVA</fullName>
            </value>
            <value>
                <fullName>AMANDA JORDÃO</fullName>
            </value>
            <value>
                <fullName>ANA CAROLINE</fullName>
                <label>ANA CAROLINE TALAVERA</label>
            </value>
            <value>
                <fullName>ANDRE BRANDAO</fullName>
            </value>
            <value>
                <fullName>ANDRESSA PETRILLA</fullName>
            </value>
            <value>
                <fullName>ANTONIO LEVI</fullName>
            </value>
            <value>
                <fullName>BEATRIZ MARIANO</fullName>
            </value>
            <value>
                <fullName>BRUNO VINICIUS</fullName>
            </value>
            <value>
                <fullName>CAIO AUGUSTO</fullName>
            </value>
            <value>
                <fullName>CARLA BREVIGLIERO</fullName>
            </value>
            <value>
                <fullName>CARLOS ALBERTO SANTANA</fullName>
            </value>
            <value>
                <fullName>CASSIANO SILVA</fullName>
            </value>
            <value>
                <fullName>CLEITON RIBEIRO</fullName>
            </value>
            <value>
                <fullName>CYLL RODRIGUES</fullName>
            </value>
            <value>
                <fullName>DANIEL BORGES</fullName>
            </value>
            <value>
                <fullName>DANIEL NOGUEIRA DE OLIVEIRA</fullName>
            </value>
            <value>
                <fullName>DANILO GUIMARÃES</fullName>
            </value>
            <value>
                <fullName>DANILO SUSANO</fullName>
            </value>
            <value>
                <fullName>DAVID QUEIROZ</fullName>
            </value>
            <value>
                <fullName>DEIBLY ARAUJO</fullName>
            </value>
            <value>
                <fullName>DENY REYNER</fullName>
            </value>
            <value>
                <fullName>DIMAS RODRIGUES</fullName>
            </value>
            <value>
                <fullName>DOUGLAS CARVALHO</fullName>
            </value>
            <value>
                <fullName>DOUGLAS SANTOS</fullName>
            </value>
            <value>
                <fullName>EDER VIEIRA</fullName>
            </value>
            <value>
                <fullName>EDMUNDO BUBLIZ</fullName>
            </value>
            <value>
                <fullName>EDUARDO RIBEIRO</fullName>
            </value>
            <value>
                <fullName>EMERSON CÉSAR</fullName>
            </value>
            <value>
                <fullName>FHELIPE AUGUSTO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>