force-app/main/default/objects/WorkOrder/fields/Tecnico_executor__c.field-meta.xml
<CustomField>
    <fullName>Tecnico_executor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Técnico executor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.Id</field>
            <operation>equals</operation>
            <value>001i00000085QYbAAM</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Ordens de trabalho</relationshipLabel>
    <relationshipName>Ordens_de_trabalho</relationshipName>
    <type>Lookup</type>
</CustomField>