force-app/main/default/objects/WorkOrder/fields/Tempo_de_conclusao__c.field-meta.xml
<CustomField>
    <fullName>Tempo_de_conclusao__c</fullName>
    <formula>IF(
OR(
TEXT(Status) == &apos;FECHADO CONCLUÍDO&apos;,
TEXT(Status) == &apos;FECHADO CONCLU�DO&apos;)
,
EndDate - StartDate,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tempo de conclusão</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>