force-app/main/default/objects/WorkOrder/fields/Tempo_em_Aberto__c.field-meta.xml
<CustomField>
    <fullName>Tempo_em_Aberto__c</fullName>
    <formula>IF(
AND(
TEXT(Status) != &quot;FECHADO CONCLUÍDO&quot;,
TEXT(Status) != &quot;CANCELADO&quot;),
TODAY() -  DATEVALUE(CreatedDate) ,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tempo em Aberto</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>