force-app/main/default/objects/WorkOrder/fields/Tempo_medio_de_atendimento__c.field-meta.xml
<CustomField>
    <fullName>Tempo_medio_de_atendimento__c</fullName>
    <formula>IF(
    (DATEVALUE(Inicio_Analise_Concluida__c) - DATEVALUE(Inicio_Em_Analise__c)) &lt;= 2,
    &quot;1 — Até 2 dias&quot;,
    IF(
        (DATEVALUE(Inicio_Analise_Concluida__c) - DATEVALUE(Inicio_Em_Analise__c)) &gt;= 3 &amp;&amp; 
        (DATEVALUE(Inicio_Analise_Concluida__c) - DATEVALUE(Inicio_Em_Analise__c)) &lt;= 7,
        &quot;2 — 3 a 7 dias&quot;,
        &quot;3 — Acima de 8 dias&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tempo médio de atendimento</label>
    <type>Text</type>
</CustomField>