force-app/main/default/objects/WorkOrder/fields/Tempo_previsto_para_conclusao__c.field-meta.xml
<CustomField>
    <fullName>Tempo_previsto_para_conclusao__c</fullName>
    <label>Tempo previsto para conclusão</label>
    <type>Time</type>
</CustomField>