force-app/main/default/objects/WorkOrder/fields/Tempo_Trabalhado_Total__c.field-meta.xml
<CustomField>
    <fullName>Tempo_Trabalhado_Total__c</fullName>
    <label>Tempo Trabalhado Total</label>
    <summarizedField>Servi_o_Executado__c.Tempo_Trabalhado__c</summarizedField>
    <summaryForeignKey>Servi_o_Executado__c.Ordem_de_trabalho_Relacionada__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>