force-app/main/default/objects/WorkOrder/fields/Testemunha__c.field-meta.xml
<CustomField>
    <fullName>Testemunha__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Testemunha</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Ordens de trabalho (Testemunha)</relationshipLabel>
    <relationshipName>Ordens_de_trabalho1</relationshipName>
    <type>Lookup</type>
</CustomField>