force-app/main/default/objects/WorkOrder/fields/TestemunhaPreAutorizacao__c.field-meta.xml
<CustomField>
    <fullName>TestemunhaPreAutorizacao__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Testemunha Pré-Autorização</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Ordens de trabalho (Testemunha Pré-Autorização)</relationshipLabel>
    <relationshipName>Ordens_de_trabalho7</relationshipName>
    <type>Lookup</type>
</CustomField>