force-app/main/default/objects/WorkOrder/fields/Tipo_de_Atendimento__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Atendimento__c</fullName>
    <label>Tipo de Atendimento</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Remoto</fullName>
            </value>
            <value>
                <fullName>Presencial - Hora Técnica</fullName>
            </value>
            <value>
                <fullName>Presencial - Pacote de Horas (4hrs)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>