force-app/main/default/objects/WorkOrder/fields/Tipo_de_registro__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_registro__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>*Tipo de registro</label>
    <type>Text</type>
</CustomField>