force-app/main/default/objects/WorkOrder/fields/Tipo_de_Servi_o__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Servi_o__c</fullName>
    <label>Tipo de Serviço</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CALIBRAÇÃO</fullName>
            </value>
            <value>
                <fullName>ENSAIO DE SEGURANÇA ELÉTRICA</fullName>
            </value>
            <value>
                <fullName>ENTREGA</fullName>
            </value>
            <value>
                <fullName>INSTALAÇÃO</fullName>
            </value>
            <value>
                <fullName>MANUTENÇÃO CORRETIVA</fullName>
            </value>
            <value>
                <fullName>MANUTENÇÃO PREVENTIVA</fullName>
            </value>
            <value>
                <fullName>OUTROS</fullName>
            </value>
            <value>
                <fullName>QUALIFICAÇÃO</fullName>
            </value>
            <value>
                <fullName>VERIFICAÇÃO FUNCIONAL</fullName>
            </value>
            <value>
                <fullName>DEMONSTRAÇÃO DE PRODUTOS</fullName>
            </value>
            <value>
                <fullName>TREINAMENTO DE ATIVOS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>