force-app/main/default/objects/WorkOrder/fields/tmp_Local_da_Execucao__c.field-meta.xml
<CustomField>
    <fullName>tmp_Local_da_Execucao__c</fullName>
    <label>Local da Execução</label>
    <length>255</length>
    <type>Text</type>
</CustomField>