force-app/main/default/objects/WorkOrder/fields/tmp_PAM_do_Instrumento__c.field-meta.xml
<CustomField>
    <fullName>tmp_PAM_do_Instrumento__c</fullName>
    <label>PAM do Instrumento</label>
    <length>50</length>
    <type>Text</type>
</CustomField>