force-app/main/default/objects/WorkOrder/fields/Total_Estimado__c.field-meta.xml
<CustomField>
    <fullName>Total_Estimado__c</fullName>
    <label>Valor total</label>
    <summarizedField>WorkOrderLineItem.Total_Estimado__c</summarizedField>
    <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>