force-app/main/default/objects/WorkOrder/fields/Total_Faturado__c.field-meta.xml
<CustomField>
    <fullName>Total_Faturado__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total faturado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>