force-app/main/default/objects/WorkOrder/fields/URL_Personalizada__c.field-meta.xml
<CustomField>
    <fullName>URL_Personalizada__c</fullName>
    <formula>IF(
	AND(
		ISPICKVAL(Status, &quot;AGENDADO&quot;),
		NOW() &gt; Data_Agendada_para_Servi_o__c
	),
	&quot;https://hospcom--c.na25.content.force.com/servlet/servlet.FileDownload?file=0153100000815of&quot;,
	&quot;https://hospcom--c.na25.content.force.com/servlet/servlet.FileDownload?file=0153100000815oV&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>URL Personalizada</label>
    <type>Text</type>
</CustomField>