force-app/main/default/objects/WorkOrder/fields/Usuario_que_Alterou_Status__c.field-meta.xml
<CustomField>
    <fullName>Usuario_que_Alterou_Status__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usuário que Alterou Status</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Ordens_de_trabalho</relationshipName>
    <type>Lookup</type>
</CustomField>