force-app/main/default/objects/WorkOrder/fields/V_Clausula11__c.field-meta.xml
<CustomField>
    <fullName>V_Clausula11__c</fullName>
    <label>Venda Cláusula 11</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>