force-app/main/default/objects/WorkOrder/fields/V_Clausula14__c.field-meta.xml
<CustomField>
    <fullName>V_Clausula14__c</fullName>
    <label>Venda Cláusula 14</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>