force-app/main/default/objects/WorkOrder/fields/V_Clausula15__c.field-meta.xml
<CustomField>
    <fullName>V_Clausula15__c</fullName>
    <label>Venda Cláusula 15</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>