force-app/main/default/objects/WorkOrder/fields/V_ClausulaEditada10__c.field-meta.xml
<CustomField>
    <fullName>V_ClausulaEditada10__c</fullName>
    <defaultValue>false</defaultValue>
    <label>V_ClausulaEditada10</label>
    <type>Checkbox</type>
</CustomField>