force-app/main/default/objects/WorkOrder/fields/V_ClausulaEditada12__c.field-meta.xml
<CustomField>
    <fullName>V_ClausulaEditada12__c</fullName>
    <defaultValue>false</defaultValue>
    <label>V_ClausulaEditada12</label>
    <type>Checkbox</type>
</CustomField>