force-app/main/default/objects/WorkOrder/fields/V_ClausulaEditada13__c.field-meta.xml
<CustomField>
    <fullName>V_ClausulaEditada13__c</fullName>
    <defaultValue>false</defaultValue>
    <label>V_ClausulaEditada13</label>
    <type>Checkbox</type>
</CustomField>