force-app/main/default/objects/WorkOrder/fields/Validador2__c.field-meta.xml
<CustomField>
    <fullName>Validador2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Validador 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Ordens de trabalho (Validador 2)</relationshipLabel>
    <relationshipName>Ordens_de_trabalho5</relationshipName>
    <type>Lookup</type>
</CustomField>