force-app/main/default/objects/WorkOrder/fields/Validador2PreAutorizacao__c.field-meta.xml
<CustomField>
    <fullName>Validador2PreAutorizacao__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Validador 2 Pré-Autorização</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Ordens de trabalho (Validador 2 Pré-Autorização)</relationshipLabel>
    <relationshipName>Ordens_de_trabalhoHlg1</relationshipName>
    <type>Lookup</type>
</CustomField>