force-app/main/default/objects/WorkOrder/fields/ValidadorPreAutorizacao__c.field-meta.xml
<CustomField>
    <fullName>ValidadorPreAutorizacao__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Validador Pré-Autorização</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Ordens de trabalho (Validador Pré-Autorização)</relationshipLabel>
    <relationshipName>Ordens_de_trabalho9</relationshipName>
    <type>Lookup</type>
</CustomField>