force-app/main/default/objects/WorkOrder/fields/Valor_da_entrada__c.field-meta.xml
<CustomField>
    <fullName>Valor_da_entrada__c</fullName>
    <label>Valor da entrada</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>