force-app/main/default/objects/WorkOrder/fields/Valor_de_venda_total__c.field-meta.xml
<CustomField>
    <fullName>Valor_de_venda_total__c</fullName>
    <label>Valor de venda total</label>
    <summarizedField>WorkOrderLineItem.Total_Estimado__c</summarizedField>
    <summaryFilterItems>
        <field>WorkOrderLineItem.Tipo__c</field>
        <operation>notEqual</operation>
        <value>SERVIÇO</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>WorkOrderLineItem.Tipo__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>