force-app/main/default/objects/WorkOrder/fields/Valor_faturado__c.field-meta.xml
<CustomField>
    <fullName>Valor_faturado__c</fullName>
    <formula>Total_Faturado__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor faturado*</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>