force-app/main/default/objects/WorkOrder/fields/Valor_Total_E_mail__c.field-meta.xml
<CustomField>
    <fullName>Valor_Total_E_mail__c</fullName>
    <formula>TEXT(Total_Estimado__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor Total (campo de e-mail)</label>
    <type>Text</type>
</CustomField>