force-app/main/default/objects/WorkOrder/fields/Valor_Total_Estimado__c.field-meta.xml
<CustomField>
    <fullName>Valor_Total_Estimado__c</fullName>
    <label>Valor Total Estimado (old)</label>
    <summarizedField>Item_Para_Cota_o__c.Valor__c</summarizedField>
    <summaryForeignKey>Item_Para_Cota_o__c.Ordem_de_trabalho__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>