force-app/main/default/objects/WorkOrder/fields/Vendedor_respons_vel_pela_OT__c.field-meta.xml
<CustomField>
    <fullName>Vendedor_respons_vel_pela_OT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vendedor responsável pela OT</label>
    <type>Checkbox</type>
</CustomField>