force-app/main/default/objects/WorkOrder/fields/X1_Higieniza_o_Feita__c.field-meta.xml
<CustomField>
    <fullName>X1_Higieniza_o_Feita__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Higienização Feita ?</label>
    <type>Checkbox</type>
</CustomField>