force-app/main/default/objects/WorkOrder/fields/X2_Instala_o_Realizada__c.field-meta.xml
<CustomField>
    <fullName>X2_Instala_o_Realizada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Instalação Realizada?</label>
    <type>Checkbox</type>
</CustomField>