force-app/main/default/objects/WorkOrder/fields/X4_E_S_E_Realizado__c.field-meta.xml
<CustomField>
    <fullName>X4_E_S_E_Realizado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E. S. E Realizado?</label>
    <type>Checkbox</type>
</CustomField>