force-app/main/default/objects/WorkOrder/fields/X4_Manuten_o_Realizada__c.field-meta.xml
<CustomField>
    <fullName>X4_Manuten_o_Realizada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manutenção Realizada?</label>
    <type>Checkbox</type>
</CustomField>