force-app/main/default/objects/WorkOrder/recordTypes/CALIBRACAO.recordType-meta.xml
<RecordType>
    <fullName>CALIBRACAO</fullName>
    <active>true</active>
    <description>ORDEM DE TRABALHO DE CALIBRAÇÃO AVULSA</description>
    <label>CALIBRAÇÃO</label>
</RecordType>