force-app/main/default/objects/WorkOrder/recordTypes/CALIBRACAO_CONTRATO.recordType-meta.xml
<RecordType>
    <fullName>CALIBRACAO_CONTRATO</fullName>
    <active>true</active>
    <description>ORDEM DE TRABALHO DE CALIBRAÇÃO COM CONTRATO DE SERVIÇOS</description>
    <label>CALIBRAÇÃO (CONTRATO)</label>
</RecordType>