force-app/main/default/objects/WorkOrder/recordTypes/Demonstra_o_de_Produto.recordType-meta.xml
<RecordType>
    <fullName>Demonstra_o_de_Produto</fullName>
    <active>true</active>
    <description>ORDEM DE TRABALHO DE DEMONSTRAÇÃO DE PRODUTO(S)</description>
    <label>DEMONSTRAÇÃO DE PRODUTO</label>
</RecordType>