force-app/main/default/objects/WorkOrder/recordTypes/ENSAIO_DE_SEG_EL_TRICA.recordType-meta.xml
<RecordType>
    <fullName>ENSAIO_DE_SEG_EL_TRICA</fullName>
    <active>true</active>
    <description>ORDEM DE TRABALHO DE E.S.E AVULSA</description>
    <label>ENSAIO DE SEG. ELÉTRICA</label>
</RecordType>