force-app/main/default/objects/WorkOrder/recordTypes/ENSAIO_DE_SEG_EL_TRICA_CONTRATO.recordType-meta.xml
<RecordType>
    <fullName>ENSAIO_DE_SEG_EL_TRICA_CONTRATO</fullName>
    <active>true</active>
    <description>ORDEM DE TRABALHO COM E.S.E COM CONTRATO DE SERVIÇOS</description>
    <label>ENSAIO DE SEG. ELÉTRICA (CONTRATO)</label>
</RecordType>