force-app/main/default/objects/WorkOrder/recordTypes/GENERICA.recordType-meta.xml
<RecordType>
    <fullName>GENERICA</fullName>
    <active>true</active>
    <label>GENERICA</label>
</RecordType>