force-app/main/default/objects/WorkOrder/recordTypes/GERAL.recordType-meta.xml
<RecordType>
    <fullName>GERAL</fullName>
    <active>true</active>
    <label>GERAL</label>
</RecordType>