force-app/main/default/objects/WorkOrder/recordTypes/MANUTEN_O_CORRETIVA.recordType-meta.xml
<RecordType>
    <fullName>MANUTEN_O_CORRETIVA</fullName>
    <active>true</active>
    <description>ORDEM DE TRABALHO DE MANUTENÇÃO CORRETIVA AVULSA</description>
    <label>MANUTENÇÃO CORRETIVA</label>
</RecordType>