force-app/main/default/objects/WorkOrder/recordTypes/MANUTEN_O_CORRETIVA_CONTRATO.recordType-meta.xml
<RecordType>
    <fullName>MANUTEN_O_CORRETIVA_CONTRATO</fullName>
    <active>true</active>
    <description>ORDEM DE TRABALHO DE MANUTENÇÃO CORRETIVA COM CONTRATO DE SERVIÇOS</description>
    <label>MANUTENÇÃO CORRETIVA (CONTRATO)</label>
</RecordType>