force-app/main/default/objects/WorkOrder/recordTypes/MANUTEN_O_PREVENTIVA_CONTRATO.recordType-meta.xml
<RecordType>
    <fullName>MANUTEN_O_PREVENTIVA_CONTRATO</fullName>
    <active>true</active>
    <description>ORDEM DE TRABALHO DE MANUTENÇÃO PREVENTIVA COM CONTRATO DE SERVIÇOS</description>
    <label>MANUTENÇÃO PREVENTIVA (CONTRATO)</label>
</RecordType>