force-app/main/default/objects/WorkOrder/recordTypes/MANUTENCAO_PREVENTIVA.recordType-meta.xml
<RecordType>
    <fullName>MANUTENCAO_PREVENTIVA</fullName>
    <active>true</active>
    <description>ORDEM DE TRABALHO DE MANUTENÇÃO PREVENTIVA AVULSA</description>
    <label>MANUTENÇÃO PREVENTIVA</label>
</RecordType>