force-app/main/default/objects/WorkOrder/recordTypes/OT_Caso_interno.recordType-meta.xml
<RecordType>
    <fullName>OT_Caso_interno</fullName>
    <active>true</active>
    <label>OT - Caso interno</label>
</RecordType>