force-app/main/default/objects/WorkOrder/recordTypes/QUALIFICA_O.recordType-meta.xml
<RecordType>
    <fullName>QUALIFICA_O</fullName>
    <active>true</active>
    <description>ORDEM DE TRABALHO DE QUALIFICAÇÃO AVULSA</description>
    <label>QUALIFICAÇÃO</label>
</RecordType>