force-app/main/default/objects/WorkOrder/recordTypes/QUALIFICA_O_CONTRATO.recordType-meta.xml
<RecordType>
    <fullName>QUALIFICA_O_CONTRATO</fullName>
    <active>true</active>
    <description>ORDEM DE TRABALHO DE  QUALIFICAÇÃO COM CONTRATO DE SERVIÇOS</description>
    <label>QUALIFICAÇÃO (CONTRATO)</label>
</RecordType>