force-app/main/default/objects/WorkOrder/recordTypes/Servi_o_de_Instala_o.recordType-meta.xml
<RecordType>
    <fullName>Servi_o_de_Instala_o</fullName>
    <active>true</active>
    <description>ORDEM DE TRABALHO DE INSTALAÇÃO DE ATIVO</description>
    <label>SERVIÇO DE INSTALAÇÃO</label>
</RecordType>