force-app/main/default/objects/WorkOrder/recordTypes/Treinamento_de_Ativos.recordType-meta.xml
<RecordType>
    <fullName>Treinamento_de_Ativos</fullName>
    <active>true</active>
    <label>TREINAMENTO DE ATIVOS</label>
</RecordType>