force-app/main/default/objects/WorkOrder/recordTypes/VERIFICA_O_FUNCIONAL.recordType-meta.xml
<RecordType>
    <fullName>VERIFICA_O_FUNCIONAL</fullName>
    <active>true</active>
    <description>VERIFICAÇÃO FUNCIONAL DE EQUIPAMENTOS</description>
    <label>VERIFICAÇÃO FUNCIONAL</label>
</RecordType>