force-app/main/default/objects/WorkOrder/validationRules/Condicao_especial1.validationRule-meta.xml
<ValidationRule>
    <fullName>Condicao_especial1</fullName>
    <active>true</active>
    <description>Data da 1ª parcela</description>
    <errorConditionFormula>AND(
TEXT(Condicao_de_pagamento__c) = &apos;Condição Especial - Aprovado pela Diretoria&apos;,
ISNULL(Data_da_primeira_parcela__c)
)</errorConditionFormula>
    <errorDisplayField>Data_da_primeira_parcela__c</errorDisplayField>
    <errorMessage>Para condição especial, preencha a data da primeira parcela.</errorMessage>
</ValidationRule>