force-app/main/default/objects/WorkOrder/validationRules/Condicao_especial2.validationRule-meta.xml
<ValidationRule>
    <fullName>Condicao_especial2</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
TEXT(Condicao_de_pagamento__c) = &apos;Condição Especial - Aprovado pela Diretoria&apos;,
ISNULL( Valor_da_entrada__c )
)</errorConditionFormula>
    <errorDisplayField>Valor_da_entrada__c</errorDisplayField>
    <errorMessage>Para condição especial, preencha o valor da entrada</errorMessage>
</ValidationRule>