force-app/main/default/objects/WorkOrder/validationRules/Condicao_especial3.validationRule-meta.xml
<ValidationRule>
    <fullName>Condicao_especial3</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
TEXT(Condicao_de_pagamento__c) = &apos;Condição Especial - Aprovado pela Diretoria&apos;,
ISNULL(Numero_de_parcelas__c)
)</errorConditionFormula>
    <errorDisplayField>Numero_de_parcelas__c</errorDisplayField>
    <errorMessage>Para condição especial, preencha o número de parcelas.</errorMessage>
</ValidationRule>