force-app/main/default/objects/WorkOrder/validationRules/Participantes_do_treinamento.validationRule-meta.xml
<ValidationRule>
    <fullName>Participantes_do_treinamento</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
!$User.Ignorar_erros__c,
RecordTypeId = &apos;01231000000taxX&apos;,
TEXT(Status) = &apos;FECHADO CONCLUÍDO&apos;,
Controle_Participantes__c = 0
)</errorConditionFormula>
    <errorMessage>Não é possível finalizar uma OT de treinamento sem preencher a lista de participantes.</errorMessage>
</ValidationRule>