force-app/main/default/objects/WorkOrder/validationRules/Responsavel_comercial.validationRule-meta.xml
<ValidationRule>
    <fullName>Responsavel_comercial</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
AND(
ISCHANGED(Respons_vel_pela_negocia_o__c),
!ISBLANK(Respons_vel_pela_negocia_o__c), 
$User.Id = &apos;00531000007hyVE&apos;,
Respons_vel_pela_negocia_o__c != &apos;00531000007hyVE&apos;
),
AND(
ISCHANGED(Respons_vel_pela_negocia_o__c), 
!ISBLANK(Respons_vel_pela_negocia_o__c), 
$User.Id = &apos;0056e00000CrS8h&apos;,
Respons_vel_pela_negocia_o__c != &apos;0056e00000CrS8h&apos;
)
)</errorConditionFormula>
    <errorDisplayField>Respons_vel_pela_negocia_o__c</errorDisplayField>
    <errorMessage>Só é permitido colocar seu próprio usuário como responsável pela negociação.</errorMessage>
</ValidationRule>