force-app/main/default/objects/WorkOrder/validationRules/Responsavel_comercial_1.validationRule-meta.xml
<ValidationRule>
    <fullName>Responsavel_comercial_1</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
TEXT(Status) = &apos;AGUARDANDO AUTORIZAÇÃO&apos;,
TEXT(Categoria__c) = &apos;AVULSO&apos;,
ISBLANK(Respons_vel_pela_negocia_o__c)
)</errorConditionFormula>
    <errorDisplayField>Respons_vel_pela_negocia_o__c</errorDisplayField>
    <errorMessage>O campo responsável pela negociação deve ser preenchido.</errorMessage>
</ValidationRule>