force-app/main/default/objects/WorkOrder/validationRules/STATUS_OT_AVULSA.validationRule-meta.xml
<ValidationRule>
    <fullName>STATUS_OT_AVULSA</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
$Profile.Id == &apos;00e6e000002JQTN&apos;,
ISCHANGED(Status),
AND(
TEXT(Categoria__c) = &apos;AVULSO&apos;,
TEXT(PRIORVALUE(Status)) = &apos;AGUARDANDO ATENDIMENTO&apos;,
NOT(TEXT(Status) = &apos;EM ATENDIMENTO&apos;),
NOT(TEXT(Status) = &apos;AGUARDANDO ENVIO DA PROPOSTA&apos;)
))</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Selecione o status AGUARDANDO ENVIO DA PROPOSTA</errorMessage>
</ValidationRule>