force-app/main/default/objects/WorkOrder/validationRules/STATUS_OT_GARANTIA.validationRule-meta.xml
<ValidationRule>
    <fullName>STATUS_OT_GARANTIA</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
$Profile.Id == &apos;00e6e000002JQTN&apos;,
ISCHANGED(Status),
AND(
OR(
TEXT(Categoria__c) = &apos;GARANTIA DE FABRICA&apos;,TEXT(Categoria__c) = &apos;CONTRATO DE LOCAÇÃO&apos;,TEXT(Categoria__c) = &apos;CONTRATO DE SERVIÇO&apos;),
TEXT(PRIORVALUE(Status)) = &apos;AGUARDANDO ATENDIMENTO&apos;,
NOT(TEXT(Status) = &apos;EM ATENDIMENTO&apos;),
NOT(TEXT(Status) = &apos;GERAR PEDIDO&apos;),
NOT(TEXT(Status) = &apos;SERVIÇO CONCLUÍDO&apos;),
NOT(TEXT(Status) = &apos;AGUARDANDO ENVIO DA PROPOSTA&apos;)
))</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Selecione o status GERAR PEDIDO, SERVIÇO CONCLUÍDO, EM ATENDIMENTO OU AGUARDANDO ENVIO DA PROPOSTA</errorMessage>
</ValidationRule>