force-app/main/default/objects/WorkOrder/validationRules/Tecnico_Executor_obrigatorio.validationRule-meta.xml
<ValidationRule>
    <fullName>Tecnico_Executor_obrigatorio</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNEW(),
  ISBLANK(Tecnico_executor__c)
)</errorConditionFormula>
    <errorMessage>O campo Técnico Executor deve ser preenchido.</errorMessage>
</ValidationRule>