force-app/main/default/objects/WorkOrder/validationRules/Tecnico_responsavel.validationRule-meta.xml
<ValidationRule>
    <fullName>Tecnico_responsavel</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$Profile.Id != &apos;00ei0000000nKA9&apos;,
$Profile.Id != &apos;00e31000001dwRf&apos;,
$Profile.Id != &apos;00e6e000002B2dN&apos;,
$Profile.Id != &apos;00e6e000002JQV9&apos;,
ISCHANGED(T_cnico_Respons_vel__c)
)</errorConditionFormula>
    <errorDisplayField>T_cnico_Respons_vel__c</errorDisplayField>
    <errorMessage>Você não possui autorização para alterar este campo.</errorMessage>
</ValidationRule>