force-app/main/default/objects/WorkOrder/validationRules/tecniconaomudastatus.validationRule-meta.xml
<ValidationRule>
    <fullName>tecniconaomudastatus</fullName>
    <active>true</active>
    <description>Técnico não muda status ag. peças</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Status, &quot;AGUARDANDO PEÇA&quot;),
    $Profile.Name = &quot;Técnico&quot;
)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Você não pode mudar o status para aguardando peças</errorMessage>
</ValidationRule>