force-app/main/default/objects/WorkOrder/validationRules/TotalFaturadoIncompleto.validationRule-meta.xml
<ValidationRule>
    <fullName>TotalFaturadoIncompleto</fullName>
    <active>false</active>
    <description>Verifica se po total faturado é 100, se sim prossegue para o fechamento</description>
    <errorConditionFormula>AND( (Faturado__c &lt;  1), ISPICKVAL( Status , &quot;FECHADO CONCLUÍDO&quot;))</errorConditionFormula>
    <errorMessage>O total faturado está abaixo de 100%, favor verificar os pedidos</errorMessage>
</ValidationRule>