force-app/main/default/objects/WorkOrder/validationRules/Validacao_campo_tecnico_descontinuado.validationRule-meta.xml
<ValidationRule>
    <fullName>Validacao_campo_tecnico_descontinuado</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
  AND( ISNEW(), NOT( ISBLANK( TEXT(T_cnico_Respons_vel__c) ) ) ),
  ISCHANGED(T_cnico_Respons_vel__c)
)</errorConditionFormula>
    <errorMessage>O campo Técnico Responsável foi descontinuado. Este não pode ser preenchido na criação nem alterado após o registro ser salvo.</errorMessage>
</ValidationRule>